[package]
name = "argon2-creds"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "argon2_creds"
path = "src/lib.rs"


[dependencies]
rust-argon2 = "0.8.3"
derive_more = "0.99.11"
unicode-normalization = "0.1.6"
ammonia = "3.1.0"
validator = "0.12.0"
validator_derive = "0.12.0"
lazy_static = "1.4.0"
regex = { version = "1.3.9", features = [ "perf-inline", "perf-dfa", "perf-literal", "perf-cache", "perf"]}
rand = "0.8.0"
