[package]
name = "argon2-creds"
version = "0.2.2"
authors = ["realaravinth <realaravinth@batsense.net>"]
description = "Convenient abstractions for all things credentials"
keywords = ["credentials", "password", "argon2"]
homepage = "https://github.com/realaravinth/argon2-creds"
repository = "https://github.com/realaravinth/argon2-creds"
documentation = "https://realaravinth.github.io/argon2-creds/argon2_creds/index.html"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "argon2_creds"
path = "src/lib.rs"


[dependencies]
rust-argon2 = "2.0.0"
derive_more = "0.99.17"
unicode-normalization = "0.1.19"
ammonia = "3.1.3"
validator = { version = "0.15.0", features = ["derive"]}
lazy_static = "1.4.0"
regex = { version = "1.5.5", features = [ "perf-inline", "perf-dfa", "perf-literal", "perf-cache", "perf"]}
rand = "0.8.4"
derive_builder = "0.11"
